# parseltongue-rust-LLM-companion

./: .gitignore  .mcp.json  2025-11-28-command-messageinit-is-analyzing-your-codebase.txt  2025-11-29-hello.txt  2025-12-01-ultrathink-tell-me-what-we-have-completed-and-what.txt  2025-12-02-ultrathink-tell-me-what-we-have-completed-and-what.txt  2026-01-23-i-would-like-you-to-create-a-new-branch-with-tod.txt  2026-01-24-i-would-like-you-to-create-a-new-branch-with-tod11.txt  2026-01-24-i-would-like-you-to-create-a-new-branch-with-tod12.txt  2026-01-30-i-would-like-you-to-create-a-new-branch-with-tod.txt  2026-02-01-httpsgithubcomthat-in-rustparseltongue-depen.txt  AGENTS.md  CHANGELOG.md  CLANG_VS_TREESITTER_COMPARISON.md  CLAUDE.md  COMMANDS.md  Cargo.toml  DEPENDENCY-EXTRACTION-HISTORY.md  FAQsToParseltongueV01.md  FINAL-TEST-REPORT-V1.0.0.md  HTTP_SERVER_IMPLEMENTATION_PROGRESS.md  PARSELTONGUE-ARCHITECTURE-COMPLETE.md  Parseltongue-Journal-20260220.txt  README.md  RELEASE_v1.4.1_SUMMARY.md  RESEARCH-PROPOSALS-CPU-ONLY-ALGORITHMS.md  RESEARCH-PROPOSALS-LLM-ENHANCEMENTS.md  SOP.md  TDD_COMPREHENSIVE_TESTING_PLAN_V160.md  TDD_PROGRESS_TRACKER.md  TDD_SESSION_STATE.md  VALIDATION-REPORT.md  conversation-2025-11-28-152458.txt  debug_test_compatibility.rs  raw-data-for-test-suite.txt  test_cpp_query.rs
.claude/: cclsp.json  (+12 more)
crates/parseltongue/: Cargo.toml
crates/parseltongue-core/: Cargo.toml
crates/parseltongue-core/src/: entities.rs  entity_class_specifications.rs  error.rs  interfaces.rs  isgl1_v2.rs  lib.rs  output_path_resolver.rs  query_extractor.rs  temporal.rs
crates/parseltongue-core/src/graph_analysis/: adjacency_list_graph_representation.rs  centrality_measures_algorithm.rs  ck_metrics_suite_algorithm.rs  entropy_complexity_algorithm.rs  integration_cross_algorithm_tests.rs  kcore_decomposition_algorithm.rs  leiden_community_algorithm.rs  mod.rs  sqale_debt_scoring_algorithm.rs  tarjan_scc_algorithm.rs  test_fixture_reference_graphs.rs
crates/parseltongue-core/src/serializers/: toon.rs
crates/parseltongue-core/src/storage/: cozo_client.rs  mod.rs  path_utils.rs
crates/parseltongue-core/tests/: c_dependency_patterns_test.rs  cozo_escaping_tests.rs  cozo_storage_integration_tests.rs  cpp_dependency_patterns_test.rs  csharp_constructor_detection_test.rs  csharp_edge_key_integration_test.rs  csharp_integration_validation_test.rs  csharp_remaining_patterns_test.rs  edge_key_format_test.rs  end_to_end_workflow.rs  fixture_harness.rs  go_dependency_patterns_test.rs  isgl1_v2_content_hashing_tests.rs  isgl1_v2_entity_matching_tests.rs  isgl1_v2_generic_sanitization_tests.rs  isgl1_v2_integration_tests.rs  isgl1_v2_key_generation_tests.rs  isgl1_v2_schema_evolution_tests.rs  java_dependency_patterns_test.rs  javascript_dependency_patterns_test.rs  language_field_database_integration_test.rs  language_field_extraction_tests.rs  php_dependency_patterns_test.rs  python_dependency_patterns_test.rs  query_json_graph_contract_tests.rs  ruby_dependency_patterns_test.rs  rust_dependency_patterns_test.rs  storage_batch_insert_performance_tests.rs  t_c_cpp_tests.rs  t_csharp_tests.rs  t_go_tests.rs  t_java_tests.rs  t_javascript_tests.rs  t_php_tests.rs  t_python_tests.rs  t_ruby_tests.rs  t_rust_edge_tests.rs  t_swift_tests.rs  t_typescript_tests.rs  typescript_dependency_patterns_test.rs
crates/parseltongue-e2e-tests/: Cargo.toml
crates/parseltongue/src/: main.rs
crates/pt01-folder-to-cozodb-streamer/: Cargo.toml
crates/pt01-folder-to-cozodb-streamer/src/: cli.rs  external_dependency_handler.rs  external_dependency_tests.rs  file_watcher.rs  file_watcher_tests.rs  isgl1_generator.rs  lib.rs  lsp_client.rs  streamer.rs  streamer_lsp_tests.rs  streamer_module_path_tests.rs  test_detector.rs  v090_specifications.rs
crates/pt01-folder-to-cozodb-streamer/tests/: batch_insertion_integration_test.rs  entity_v2_fields_population_test.rs  isgl1_v2_key_generation_test.rs  multi_language_extraction_test.rs  parallel_ingestion_test.rs  tdd_classification_test.rs  tree_sitter_api_compatibility_test.rs
crates/pt02-folder-to-ram-snapshot/: Cargo.toml
crates/pt02-folder-to-ram-snapshot/src/: lib.rs
crates/pt08-http-code-query-server/: Cargo.toml
crates/pt08-http-code-query-server/src/: command_line_argument_parser.rs  file_watcher_integration_service.rs  file_watcher_integration_service_tests.rs  http_server_startup_runner.rs  incremental_reindex_core_logic.rs  initial_scan.rs  lib.rs  port_selection.rs  route_definition_builder_module.rs  scope_filter_utilities_module.rs  snapshot_loader_module.rs  static_file_embed_module.rs  static_file_embed_tests.rs  structured_error_handling_types.rs
crates/pt08-http-code-query-server/src/file_watcher_service_module/: debouncer.rs  mod.rs  path_filter.rs  watcher_service.rs  watcher_types.rs
crates/pt08-http-code-query-server/src/http_endpoint_handler_modules/: api_reference_documentation_handler.rs  blast_radius_impact_handler.rs  centrality_measures_entity_handler.rs  circular_dependency_detection_handler.rs  code_entities_fuzzy_search_handler.rs  code_entities_list_all_handler.rs  code_entity_detail_view_handler.rs  codebase_statistics_overview_handler.rs  complexity_hotspots_ranking_handler.rs  coupling_cohesion_metrics_handler.rs  coupling_metrics_handler.rs  dependency_edges_list_handler.rs  diff_analysis_compare_handler.rs  entropy_complexity_measurement_handler.rs  file_watcher_status_handler.rs  folder_structure_discovery_handler.rs  forward_callees_query_graph_handler.rs  incremental_reindex_file_handler.rs  ingestion_coverage_folder_handler.rs  ingestion_diagnostics_coverage_handler.rs  instability_index_handler.rs  kcore_decomposition_layering_handler.rs  leiden_community_detection_handler.rs  mod.rs  pagerank_ranking_handler.rs  reverse_callers_query_graph_handler.rs  (+10 more)
crates/pt08-http-code-query-server/tests/: e2e_file_watcher_tests.rs  e2e_incremental_indexing_tests.rs  e2e_incremental_reindex_isgl1v2_tests.rs  file_watcher_language_coverage_tests.rs  http_server_integration_tests.rs  watcher_service_lifetime_test.rs
(+980 files in other folders)
