[workspace]
members = [
    "crates/*"
]
resolver = "2"

[workspace.package]
version = "1.0.1"
edition = "2021"
authors = ["Parseltongue Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/that-in-rust/parseltongue"
homepage = "https://github.com/that-in-rust/parseltongue"
rust-version = "1.70"

[workspace.dependencies]
# Core dependencies
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }

# CLI dependencies
clap = { version = "4.0", features = ["derive"] }
console = "0.15"
indicatif = "0.17"

# Parsing dependencies
tree-sitter = "0.25"  # Support for ABI version 15 (required by latest parsers)
tree-sitter-rust = "0.23"
tree-sitter-python = "0.25"
tree-sitter-javascript = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.25"
tree-sitter-java = "0.23"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-php = "0.24"
tree-sitter-c-sharp = "0.23"
tree-sitter-swift = "0.7"
tree-sitter-kotlin = "0.3"
tree-sitter-scala = "0.24"
syn = { version = "2.0", features = ["full", "parsing"] }

# Storage dependencies
# Using RocksDB for persistent storage (recommended by CozoDB)
cozo = { version = "0.7.6", default-features = false, features = ["storage-rocksdb", "rayon"] }

# Export dependencies
wasm-bindgen = "0.2"

# Development dependencies
criterion = "0.5"
proptest = "1.0"
tempfile = "3.0"
tokio-test = "0.4"
async-trait = "0.1"

# Export format dependencies
mermaid = "0.1"
graphviz = "0.2"
