[package]
name = "parseltongue-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[dependencies]
# Core dependencies
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid = { version = "1.0", features = ["v4", "serde"] }
url = { version = "2.0", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
async-trait = "0.1"

# Parsing dependencies
tree-sitter.workspace = true
tree-sitter-rust.workspace = true
tree-sitter-python.workspace = true
tree-sitter-c.workspace = true
tree-sitter-cpp.workspace = true
tree-sitter-ruby.workspace = true
tree-sitter-javascript.workspace = true
tree-sitter-typescript.workspace = true
tree-sitter-go.workspace = true
tree-sitter-java.workspace = true
tree-sitter-php.workspace = true
tree-sitter-c-sharp.workspace = true
tree-sitter-swift.workspace = true
# tree-sitter-kotlin.workspace = true  # NOTE: Incompatible tree-sitter version (0.20 vs 0.25)
tree-sitter-sql = "0.0.2"  # v1.5.6: SQL language support (PostgreSQL-focused grammar)

# Storage dependencies
cozo.workspace = true
rayon.workspace = true

# Path normalization dependencies (v1.6.5)
path-slash = "0.2"

[dev-dependencies]
tempfile.workspace = true
proptest.workspace = true
tokio-test.workspace = true

[features]
default = []
test-utils = []