[package]
name = "parseltongue-e2e-tests"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
# Core dependencies
parseltongue-core = { path = "../parseltongue-core" }
pt01-folder-to-cozodb-streamer = { path = "../pt01-folder-to-cozodb-streamer" }
pt02-llm-cozodb-to-context-writer = { path = "../pt02-llm-cozodb-to-context-writer" }

# Dependencies from workspace
anyhow.workspace = true
tokio = { workspace = true, features = ["full"] }
serde.workspace = true
serde_json.workspace = true

# Testing dependencies
tempfile.workspace = true
syn.workspace = true

[dev-dependencies]
tokio-test.workspace = true
