[package]
name = "parseltongue"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "parseltongue"
path = "src/main.rs"

[dependencies]
# CLI framework
clap = { workspace = true }
console = { workspace = true }

# Core library (provides storage, entities, traits)
parseltongue-core = { path = "../parseltongue-core" }

# Import all tool crates as libraries (workflow-ordered pt01-pt07)
pt01-folder-to-cozodb-streamer = { path = "../pt01-folder-to-cozodb-streamer" }
pt02-llm-cozodb-to-context-writer = { path = "../pt02-llm-cozodb-to-context-writer" }
pt07-visual-analytics-terminal = { path = "../pt07-visual-analytics-terminal" }

# Core dependencies
anyhow = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
