[package]
name = "parseltongue"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "parseltongue"
path = "src/main.rs"

[dependencies]
# CLI framework
clap = { workspace = true }
console = { workspace = true }

# Core library (provides storage, entities, traits)
parseltongue-core = { path = "../parseltongue-core" }

# Import all tool crates as libraries (HTTP-only architecture)
pt01-folder-to-cozodb-streamer = { path = "../pt01-folder-to-cozodb-streamer" }
pt08-http-code-query-server = { path = "../pt08-http-code-query-server" }

# Core dependencies
anyhow = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
