[package]
name = "pt01-folder-to-cozodb-streamer"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[dependencies]
# Core dependencies
parseltongue-core = { path = "../parseltongue-core" }
anyhow.workspace = true
thiserror.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }

# Parsing dependencies
tree-sitter.workspace = true
tree-sitter-rust.workspace = true
tree-sitter-python.workspace = true
tree-sitter-javascript.workspace = true
tree-sitter-typescript.workspace = true
tree-sitter-go.workspace = true
tree-sitter-java.workspace = true
tree-sitter-c.workspace = true
tree-sitter-cpp.workspace = true
tree-sitter-ruby.workspace = true
tree-sitter-php.workspace = true
tree-sitter-c-sharp.workspace = true
tree-sitter-swift.workspace = true
tree-sitter-kotlin.workspace = true
tree-sitter-scala.workspace = true

# Storage dependencies
cozo = { workspace = true }
rayon = { workspace = true }

# CLI dependencies
clap = { workspace = true, features = ["derive"] }
console.workspace = true
indicatif.workspace = true
walkdir = "2.0"
async-trait.workspace = true

# File watching dependencies
notify = { workspace = true }
notify-debouncer-full = "0.3"

# Logging dependencies
tracing = "0.1"

[dev-dependencies]
criterion.workspace = true
proptest.workspace = true
tempfile.workspace = true
tokio-test.workspace = true
async-trait.workspace = true

[lib]
name = "pt01_folder_to_cozodb_streamer"
path = "src/lib.rs"