[package]
name = "pt08-http-code-query-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "pt08_http_code_query_server"
path = "src/lib.rs"

[dependencies]
# HTTP server framework
axum = "0.7"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Core library (provides storage, entities, traits)
parseltongue-core = { path = "../parseltongue-core" }

# Ingestion tool (for startup indexing)
pt01-folder-to-cozodb-streamer = { path = "../pt01-folder-to-cozodb-streamer" }

# Core dependencies
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
urlencoding = "2.1"

# Database
cozo = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
tower = { version = "0.5", features = ["util"] }
urlencoding = "2.1"
